// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageAbsoluteVoteAndShare /> renders correctly 1`] = `
<DebateStepPageAbsoluteVoteAndShare___StyledAppBox
  _css={[Function]}
  p={
    Array [
      6,
      8,
    ]
  }
  position="fixed"
  top={50}
  width="100%"
  zIndex={999}
>
  <DebateStepPageAbsoluteVoteAndShare___StyledAppBox2
    className="container"
  >
    <ForwardRef
      alignItems="center"
      direction={
        Array [
          "column",
          "row",
        ]
      }
      justifyContent="center"
      spacing={4}
    >
      <Text
        color="gray.900"
        fontSize={4}
        textAlign={
          Array [
            "center",
            "left",
          ]
        }
      />
      <Relay(DebateStepPageVote)
        debateId="debate1"
        isAuthenticated={true}
        onSuccess={[MockFunction]}
        step={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "debate": Object {
              "$fragmentRefs": null,
              "id": "debate1",
              "viewerHasArgument": undefined,
            },
            "url": "step/123",
          }
        }
        viewerHasArgument={false}
        width="unset"
      />
    </ForwardRef>
  </DebateStepPageAbsoluteVoteAndShare___StyledAppBox2>
</DebateStepPageAbsoluteVoteAndShare___StyledAppBox>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> renders correctly on mobile 1`] = `
<DebateStepPageAbsoluteVoteAndShare___StyledAppBox
  _css={[Function]}
  borderTopLeftRadius="poppin"
  borderTopRightRadius="poppin"
  bottom={0}
  p={
    Array [
      6,
      8,
    ]
  }
  position="fixed"
  width="100%"
  zIndex={999}
>
  <DebateStepPageAbsoluteVoteAndShare___StyledAppBox2
    className="container"
  >
    <ForwardRef
      alignItems="center"
      direction={
        Array [
          "column",
          "row",
        ]
      }
      justifyContent="center"
      spacing={4}
    >
      <Text
        color="gray.900"
        fontSize={4}
        textAlign={
          Array [
            "center",
            "left",
          ]
        }
      />
      <Relay(DebateStepPageVote)
        debateId="debate1"
        isAuthenticated={true}
        onSuccess={[MockFunction]}
        step={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "debate": Object {
              "$fragmentRefs": null,
              "id": "debate1",
              "viewerHasArgument": undefined,
            },
            "url": "step/123",
          }
        }
        viewerHasArgument={false}
        width="unset"
      />
    </ForwardRef>
  </DebateStepPageAbsoluteVoteAndShare___StyledAppBox2>
</DebateStepPageAbsoluteVoteAndShare___StyledAppBox>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> renders correctly when argumented 1`] = `
<DebateStepPageAbsoluteVoteAndShare___StyledAppBox
  _css={[Function]}
  p={
    Array [
      6,
      8,
    ]
  }
  position="fixed"
  top={50}
  width="100%"
  zIndex={999}
>
  <DebateStepPageAbsoluteVoteAndShare___StyledAppBox2
    className="container"
  >
    <Relay(Connect(DebateStepPageVoteForm))
      body="blabla le body"
      debate={
        Object {
          "$fragmentRefs": null,
          "id": "debate1",
          "viewerHasArgument": true,
        }
      }
      isAbsolute={true}
      isMobile={false}
      setShowArgumentForm={[MockFunction]}
      setVoteState={[MockFunction]}
      showArgumentForm={true}
      url="step/123"
      viewerIsConfirmed={true}
      voteState="ARGUMENTED"
    />
  </DebateStepPageAbsoluteVoteAndShare___StyledAppBox2>
</DebateStepPageAbsoluteVoteAndShare___StyledAppBox>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> renders correctly when argumented on mobile 1`] = `
<DebateStepPageAbsoluteVoteAndShare___StyledAppBox
  _css={[Function]}
  borderTopLeftRadius="poppin"
  borderTopRightRadius="poppin"
  bottom={0}
  p={
    Array [
      6,
      8,
    ]
  }
  position="fixed"
  width="100%"
  zIndex={999}
>
  <DebateStepPageAbsoluteVoteAndShare___StyledAppBox2
    className="container"
  >
    <Relay(Connect(DebateStepPageVoteForm))
      body="blabla le body"
      debate={
        Object {
          "$fragmentRefs": null,
          "id": "debate1",
          "viewerHasArgument": true,
        }
      }
      isAbsolute={true}
      isMobile={true}
      setShowArgumentForm={[MockFunction]}
      setVoteState={[MockFunction]}
      showArgumentForm={true}
      url="step/123"
      viewerIsConfirmed={true}
      voteState="ARGUMENTED"
    />
  </DebateStepPageAbsoluteVoteAndShare___StyledAppBox2>
</DebateStepPageAbsoluteVoteAndShare___StyledAppBox>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> renders correctly when voted 1`] = `
<DebateStepPageAbsoluteVoteAndShare___StyledAppBox
  _css={[Function]}
  p={
    Array [
      6,
      8,
    ]
  }
  position="fixed"
  top={50}
  width="100%"
  zIndex={999}
>
  <DebateStepPageAbsoluteVoteAndShare___StyledAppBox2
    className="container"
  >
    <Relay(Connect(DebateStepPageVoteForm))
      body="blabla le body"
      debate={
        Object {
          "$fragmentRefs": null,
          "id": "debate1",
          "viewerHasArgument": undefined,
        }
      }
      isAbsolute={true}
      isMobile={false}
      setShowArgumentForm={[MockFunction]}
      setVoteState={[MockFunction]}
      showArgumentForm={true}
      url="step/123"
      viewerIsConfirmed={true}
      voteState="VOTED"
    />
  </DebateStepPageAbsoluteVoteAndShare___StyledAppBox2>
</DebateStepPageAbsoluteVoteAndShare___StyledAppBox>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> renders correctly when voted on mobile 1`] = `
<DebateStepPageAbsoluteVoteAndShare___StyledAppBox
  _css={[Function]}
  borderTopLeftRadius="poppin"
  borderTopRightRadius="poppin"
  bottom={0}
  p={
    Array [
      6,
      8,
    ]
  }
  position="fixed"
  width="100%"
  zIndex={999}
>
  <DebateStepPageAbsoluteVoteAndShare___StyledAppBox2
    className="container"
  >
    <Relay(Connect(DebateStepPageVoteForm))
      body="blabla le body"
      debate={
        Object {
          "$fragmentRefs": null,
          "id": "debate1",
          "viewerHasArgument": undefined,
        }
      }
      isAbsolute={true}
      isMobile={true}
      setShowArgumentForm={[MockFunction]}
      setVoteState={[MockFunction]}
      showArgumentForm={true}
      url="step/123"
      viewerIsConfirmed={true}
      voteState="VOTED"
    />
  </DebateStepPageAbsoluteVoteAndShare___StyledAppBox2>
</DebateStepPageAbsoluteVoteAndShare___StyledAppBox>
`;
